# waku-waku-video-meeting

./: .gitignore  README.md  docker-compose-aws.yml  docker-compose.yml  make-package.sh
auth/: Cargo.toml  Dockerfile  sample.env
auth/src/: auth.rs  errors.rs  handler.rs  logger.rs  main.rs
client/: .eslintrc.json  .gitignore  Dockerfile  package-lock.json  package.json  tsconfig.json  webpack.config.js
client/nginx/: Dockerfile
client/nginx-aws/: Dockerfile  nginx.conf
client/nginx-aws/conf.d/: proxy.sample_conf
client/nginx/conf.d/: proxy.conf
client/public/: index.html
client/src/: App.vue  LoginRoom.vue  MeetingRoom.vue  app-data-types.ts  index.ts  system.ts
client/src/avatar/: avatar.ts  graphic.ts  messaging.ts  mounter.ts
client/src/plugins/: app-data.ts
client/src/rtc/: rtc.ts
db/: Dockerfile
db/init-scripts/: 001_init-app-user-db.sh
sfu/: Cargo.toml  Dockerfile  sample.env
sfu/src/: data.rs  errors.rs  handler.rs  ice.rs  main.rs
