[package]
name = "auth"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = { version = "4.0.*" }
serde = { version = "1.0.*", features = ["derive"]}

# env
dotenv = { version = "0.15.*" }

# log
log = { version = "0.4.*" }
env_logger = { version = "0.9.*" }

# secret token
rand = { version = "0.8.*"}
rand_chacha = { version = "0.3.*" }
base64 = { version =  "0.13.*" }

# db
tokio = { version = "1.17.*", features=["full"]}
mobc = { version = "0.7.*" }
tokio-postgres = { version = "0.7.*" }
mobc-postgres = { version = "0.7.*" }
postgres-types = { version = "0.2.*", features = ["derive"] }

# jwt
alcoholic_jwt = { version = "1.0.*"}
actix-web-httpauth = { version = "0.6.*" }
reqwest = { version = "0.11.*", features = ["json"] }